# building-site-api

./: .gitignore  README.md  api.py  geojson_ex.json  geojson_ex2.json  main.py  pyproject.toml  test_space.ipynb  validator_2.py
site_api/: data_model.py  helper_functions.py
