[tool.poetry]
name = "site-api"
version = "0.1.0"
description = ""
authors = ["Bruce Chappell <bruce.chappell@hydro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
ipykernel = "^6.29.5"
geojson = "^3.1.0"
shapely = "^2.0.5"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
mangum = "^0.17.0"
boto3 = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
